[package]
name = "stubborn-io"
version = "0.3.0"
authors = ["David Raifaizen <david.raifaizen@protonmail.com>"]
edition = "2018"
description = "io traits/structs that automatically recover from potential disconnections/interruptions."
license = "MIT"
keywords = ["reconnect", "retry", "stubborn", "io", "StubbornTcpStream"]
repository = "https://github.com/craftytrickster/stubborn-io"
documentation = "https://docs.rs/stubborn-io"
readme = "README.md"
 
[dependencies]
tokio = { version = "1", features = ["time", "net"] }
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "fs", "io-util"] }
tokio-util = { version = "0.6", features = ["codec"] }
futures = "0.3"
